--- a/files/plex_mate_config.yaml
+++ b/files/plex_mate_config.yaml
@@ -1,5 +1,5 @@
 ######################################################################
-# SJVA Plex Mate - 설정파일
+# Plex Mate - 설정파일
 # 주의 : 매뉴얼에서 사용 변수 값 확인
 ######################################################################
 
