--- a/files/plex_mate_config.yaml
+++ b/files/plex_mate_config.yaml
@@ -28,7 +28,7 @@
 # ~~~ ORDER BY title LIMIT 1000;  => 천개의 데이터만 가져옴
 # ~~~ ORDER BY title LIMIT 1000 OFFSET 1000;  => 2페이지. 천개 제외 1000개의 가져옴
 # ~~~ ORDER BY title LIMIT 1000 OFFSET 2000;  => 3페이지.
-파일정리 영화 쿼리: SELECT * FROM metadata_items WHERE metadata_type = 1 AND library_section_id = ? ORDER BY title 
+파일정리 영화 쿼리: SELECT * FROM metadata_items WHERE metadata_type = 1 AND library_section_id = ? ORDER BY title
 ######################################################################
 
 ######################################################################
@@ -83,15 +83,15 @@
 ######################################################################
 # 특정 섹션만 주기적 스캔을 하려고 할 때 등록하여 사용
 # - 를 주어 리스트형으로 여러 건 등록
-# 스케쥴링 순서 변경시에는 "모두 스케쥴링 취소" 후 "모두 스케쥴링 등록" 
+# 스케쥴링 순서 변경시에는 "모두 스케쥴링 취소" 후 "모두 스케쥴링 등록"
 #
 
 # =============================================================================
-# 섹션ID      : 섹션 ID
+# 섹션ID      : 섹션 ID (바이너리일 경우 필수)
 # 스케쥴링    : 등록 or 수동. 생략시 등록
-#              - 등록 : 모듈 로딩시 자동 등록 
+#              - 등록 : 모듈 로딩시 자동 등록
 #              - 수동 : 자동등록 하지 않고 유저가 GUI에서 실행
-# 주기        : 스케쥴링 항목이 '등록'인 경우에만 사용. 스케쥴링 주기. 
+# 주기        : 스케쥴링 항목이 '등록'인 경우에만 사용. 스케쥴링 주기.
 #             분단위 숫자나 cron 정보
 # 스캔모드    : 웹 or 바이너리. 생략시 '바이너리'
 #             - 웹 : 사용자가 브라우저 등을 통해서 스캔 명령을 날리는 거와 같음.
@@ -101,15 +101,29 @@
 #              지정되어 있는 경우 실행시간이 지나면 프로세스 중단.
 # 폴더       : 스캔할 폴더. 생략시 섹션 전체
 # 설명       : 생략가능. 스케쥴링 목록에 표시되는 설명
+# 새로고침    : vfs/refresh 실행 여부.
+#   비동기    : true|false 생략시 false
+#              - true: _async=true
+#              - false: _async=false
+#   하위폴더   : true|false 생략시 false
+#              - true: recursive=true
+#              - false: recursive=false
+#   스캔무시   : true|false 생략시 false
+#              - true: 새로고침만 실행
+#              - false: 스캔을 정상적으로 실행
 # =============================================================================
 
-#  - 섹션ID: 
-#    주기: 
-#    스케쥴링: 
-#    스캔모드: 
+#  - 섹션ID:
+#    주기:
+#    스케쥴링:
+#    스캔모드:
 #    최대실행시간:
 #    폴더:
 #    설명:
+#    새로고침:
+#      하위폴더:
+#      비동기:
+#      스캔무시:
 
 # 샘플
 
@@ -122,7 +136,7 @@
 #    주기: 10
 #    설명: 2.예능 - 9
 #    스케쥴링: 등록
-#  
+#
 #  - 섹션ID: 11
 #    주기: 15
 #    설명: 3.교양 - 11
@@ -130,16 +144,16 @@
 #  - 섹션ID: 12
 #    주기: 5 * * * *
 #    설명: 4.어린이 - 12
-#  
+#
 #  - 섹션ID: 13
 #    주기: 10 * * * *
 #    설명: 5.기타 - 13
-#  
+#
 #  - 섹션ID: 23
 #    주기: 5
 #    설명: "영화 최신 2021.10 폴더만"
 #    폴더: "/mnt/gds/영화/4.최신/2021.10"
-#  
+#
 #  - 섹션ID: 18
 #    주기: 0 5 * * *
 #    스캔모드: 웹
@@ -148,15 +162,15 @@
 #  - 섹션ID: 18
 #    스케쥴링: 수동
 #    설명: "영화 ALL / 수동용"
-#  
+#
 #  - 섹션ID: 41
 #    주기: 3000
 #    스케쥴링: 수동
 #    스캔모드: 웹
-#    설명: F.외국 
-    
-라이브러리 주기적 스캔 목록: 
+#    설명: F.외국
+
+라이브러리 주기적 스캔 목록:
 
 
-  
-# SECTION END  
+
+# SECTION END
