- 1.2.30 (2025.09.23)     - 주기적 스캔: 기준경로(anchor) 옵션 추가     - DB 툴: 휴지통 표시 제거에 영화 타입의 섹션 포함

--- a/files/plex_mate_config.yaml
+++ b/files/plex_mate_config.yaml
@@ -162,12 +162,16 @@
 #  - 섹션ID: 18
 #    스케쥴링: 수동
 #    설명: "영화 ALL / 수동용"
+#    기준경로:
+#      - /mnt/gds/GDRIVE/VIDEO/영화/제목
+#      - /mnt/gds/GDRIVE/VIDEO/영화/최신
 #
 #  - 섹션ID: 41
 #    주기: 3000
 #    스케쥴링: 수동
 #    스캔모드: 웹
 #    설명: F.외국
+#    기준경로: /mnt/gds/GDRIVE/VIDEO/외국TV
 
 라이브러리 주기적 스캔 목록:
 
